2.2.1
-----
1. Fix page not loading in WebKit/iOS - due to WebKit not supporting lookbehind
   regex.
2. Fix biographies and album reviews not showing.

2.2.0
-----
 1. Add support for listing 'band' under certain genres, and in the queue.
 2. If composer, conductor, or band, genre list set to '*' then apply to all
    genres.
 3. Save composer, conductor, and band genres to local storage so that they are
    accessible at start-up if queue is obtained before preferences read.
 4. If a the 'default' player re-appears in LMS's players list, then switch to
    this player.
 5. If no 'default' player set, but player ID passed as a query parameter, then
    if this player re-appears in LMS's players list switch to it.
 6. Add server-side settings to control whether composer, conductor, and band
    tags are shown in queue and now-playing.
 7. Clicking anywhere in 'Music sources' subtoolbar will open search field.
 8. Add items from an artist's or album's context menu to the 'More' menu shown
    in the subtoolbar.
 9. If screen width is less than 450px show down/up arrow in 'Random Mix'
    dialog to show/hide advanced options.
10. Remove IE11 meta tag, doesn't work.
11. Don't defer loading volume overlay and screensaver javascript files,
    otherwise they do not work until change page.
12. Always send +/- volume-step when up/down volume button pressed.
13. If desktop layout is showing a single volume button, use mobile style.
14. Increase minimum desktop layout width to 750px for volume slider.
15. Fix layout of volume-dialog when used in desktop layout.
16. Add server-side setting to control whether 'Fixed volume', and disabled
    slider, is used for fixed volume players.
17. Remove 'Fixed volume' label, disable slider and hide value for fixed volume
    players.
18. Use acoustic guitar for genres icon.
19. When pinning a 'My Music' item prompt user if we should store the library_id
    with this.